fixing overflow

--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@
 
 html,
 body {
-    height: 100%;
+    /* height: 100%; */
     font-family: Taviraj, sans-serif;
-    max-width: 100vh;
+    overflow-x:hidden !important;
 }
 
 
